--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -36,10 +36,9 @@
     -->
 
       <!--STYLES-->
+      <link rel="stylesheet" href="/styles/fa.css">
       <link rel="stylesheet" href="/styles/importer.css">
-
-     <!--
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+      <link rel="stylesheet" href="/styles/style.css">
       <!--STYLES END-->
 
 </head>
@@ -71,7 +70,7 @@
     -->
 
     <!--TEMPLATES-->
-  
+    
     <!--TEMPLATES END-->
 
 
