--- a/views/pages/studentForm.html
+++ b/views/pages/studentForm.html
@@ -16,7 +16,7 @@
     
     <div>
       <label for="fallSport">Fall sport</label>
-      <%- Html.DropDwonList("Fall Sport", new SelectList(sport, "season" %>
+      <%- Html.DropDownList("Fall Sport", new SelectList(studentModel, "fallSport") %>
     </div>
 
     <div>
