--- a/views/pages/studentForm.html
+++ b/views/pages/studentForm.html
@@ -24,6 +24,6 @@
       <%- springSport %>
     </div>
 
-    <button type="submit"><%= buttonLabel %></button>
+    <button id="submitButton" type="submit"><%= buttonLabel %></button>
 </form>
  
