--- a/views/pages/studentForm.html
+++ b/views/pages/studentForm.html
@@ -24,6 +24,11 @@
       <%- majors %>
     </div>
     
+    <br> 
+    Are you an athlete?
+    <br>
+    
+    
     <div>
       <label for="fallSport">Fall sport</label>
       <%- fallSport %>
