--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    
+    Naylor Learning Center
   </title>
 
   <!-- Viewport mobile tag for sensible mobile support -->
