--- a/views/pages/studentForm.html
+++ b/views/pages/studentForm.html
@@ -1,3 +1,6 @@
+
+<script src="assets/js/studentForm.js"></script>
+
 <form method="POST" action="<%= action %>">
     <div>
       <label for="firstName" value="First Name">First name</label>
@@ -46,9 +49,3 @@
     
     <button type="submit"><%= buttonLabel %></button>
 </form>
-
-function showSports() {
-      document.getElementById('fallSports').style.display = "fallSports";
-      document.getElementById('springSports').style.display = "springSports";
-      }
- 
