--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -36,9 +36,9 @@
     -->
 
       <!--STYLES-->
-     <!-- <link rel="stylesheet" href="/styles/fa.css">
+      <link rel="stylesheet" href="/styles/fa.css">
       <link rel="stylesheet" href="/styles/importer.css">
-      <link rel="stylesheet" href="/styles/style.css">-->
+      <link rel="stylesheet" href="/styles/style.css">
       <!--STYLES END-->
 
 </head>
@@ -115,6 +115,7 @@
 
             <!--SCRIPTS-->
             <script src="/dependencies/sails.io.js"></script>
+            <script src="/js/studentForm.js"></script>
             <!--SCRIPTS END-->
 </body>
 
