Rearrange all the things to follow sailsjs conventions

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -24,6 +24,6 @@
       <%- springSport %>
     </div>
 
-    <button id="submitButton" type="submit"><%= buttonLabel %></button>
+    <button id="submitButton" type="submit">Update</button>
 </form>
  
