--- a/views/pages/studentForm.html
+++ b/views/pages/studentForm.html
@@ -1,5 +1,5 @@
 
-<script type="text/javascript" src="/js/studentForm.js"></script>
+<script type="text/javascript" src="/studentForm.js"></script>
 
 <form method="POST" action="<%= action %>">
     <div>
@@ -43,7 +43,7 @@
 
     <div>
       <br>
-      <label for="springSport" id="springSports">Spring sport</label>
+      <label for="springSport" id="springSports" style="display:none;">Spring sport</label>
       <%- springSport %>
       <br>
     </div>
