--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -6,6 +6,8 @@
   <title>
     Naylor Learning Center
   </title>
+  
+  <link rel="shortcut icon" type="image/x-icon" href="DE_Logo.ico" />
 
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
