--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -7,7 +7,8 @@
     Naylor Learning Center
   </title>
   
-  <link rel="shortcut icon" type="image/x-icon" href="DE_Logo.ico" />
+  <link rel="icon" type="image/x-icon" href="DE_Logo.ico" />
+  
 
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
