add Jquery to student form

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -117,6 +117,7 @@
     -->
 
             <!--SCRIPTS-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="/dependencies/sails.io.js"></script>
             <script src="/js/studentForm.js"></script>
             <!--SCRIPTS END-->
