--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -35,13 +35,13 @@
     
     Are you an athlete?
     <br>
-    <input type="radio" name="yesAthlete" onclick="show()" /> Yes
-    <input type="radio" name="noAthlete" /> No
+    <input id="yesAthlete" type="radio" name="YNAthlete"/> Yes
+    <input id="noAthlete" type="radio" name="YNAthlete"/> No
     <br>
     
     <div>
       <br>
-      <label for="fallSport" id="fallSports" style="display:none;" class="sports">Fall sport <%- fallSport %></label>
+      <labelfor="fallSport" id="fallSports" style="display:none;" class="sports">Fall sport <%- fallSport %></label>
     </div>
 
     <div>
