--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -7,7 +7,7 @@
     Naylor Learning Center
   </title>
   
-  <link rel="icon" type="image/x-icon" href="DE_Logo.ico" />
+  <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
   
 
   <!-- Viewport mobile tag for sensible mobile support -->
@@ -39,6 +39,7 @@
     -->
 
       <!--STYLES-->
+      
       <link rel="stylesheet" href="/styles/fa.css">
       <link rel="stylesheet" href="/styles/importer.css">
       <link rel="stylesheet" href="/styles/style.css">
@@ -119,7 +120,7 @@
             <!--SCRIPTS-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="/dependencies/sails.io.js"></script>
-            <script src="/js/studentForm.js"></script>
+            <script type="text/javascript" src="/js/studentForm.js"></script>
             <!--SCRIPTS END-->
 </body>
 
