--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -39,7 +39,6 @@
     -->
 
       <!--STYLES-->
-      
       <link rel="stylesheet" href="/styles/fa.css">
       <link rel="stylesheet" href="/styles/importer.css">
       <link rel="stylesheet" href="/styles/style.css">
@@ -118,9 +117,8 @@
     -->
 
             <!--SCRIPTS-->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="/dependencies/sails.io.js"></script>
-            <script type="text/javascript" src="/js/studentForm.js"></script>
+            <script src="/js/studentForm.js"></script>
             <!--SCRIPTS END-->
 </body>
 
