--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -6,9 +6,12 @@
   <title>
     Naylor Learning Center
   </title>
-  
+
   <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
-  
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/js/studentForm.js"></script>
+
 
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -77,7 +80,7 @@
     <!--TEMPLATES END-->
 
 
-            <!--
+    <!--
         Server-side View Locals
         ========================
 
@@ -93,7 +96,7 @@
     -->
 
 
-            <!--
+    <!--
 
       Client-side Javascript
       ========================
@@ -116,10 +119,9 @@
 
     -->
 
-            <!--SCRIPTS-->
-            <script src="/dependencies/sails.io.js"></script>
-            <script src="/js/studentForm.js"></script>
-            <!--SCRIPTS END-->
+    <!--SCRIPTS-->
+    <script src="/dependencies/sails.io.js"></script>
+    <!--SCRIPTS END-->
 </body>
 
 </html>
