Delete models of class rank and residential status;

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -15,8 +15,22 @@
     <br>
     
     <div>
-      <label for="ClassRank">Class Rank</label>
-      <%- classRank %>
+      <label for="classRank">Class Rank</label>
+      <select>
+        <option value="freshman">Freshman</option>
+        <option value="Sophmore">Sophmore</option>
+        <option value="Junior">Junior</option>
+        <option value="Senior">Senior</option>
+      </select>
+    </div>
+    <br>
+    
+    <div>
+      <label for="residentialStatus">Residential Status</label>
+      <select>
+        <option value="campusResident">Campus Resident</option>
+        <option value="commuter">Commuter</option>
+      </select>
     </div>
     <br>
     
