--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -121,6 +121,7 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
+    <script src="/js/studentForm.js"></script>
     <!--SCRIPTS END-->
 </body>
 
