--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -33,13 +33,13 @@
     
     <div>
       <label for="MajorOne">Major 1</label>
-      <%- majors %>
+      <%- major %>
     </div>
     <br>
     
     <div>
       <label for="MajorTwo">Major 2</label>
-      <%- majors %>
+      <%- major %>
     </div>
     <br>
     
