--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -52,12 +52,12 @@
     
     <div>
       <br>
-      <labelfor="fallSport" id="fallSports" style="display:none;" class="sports">Fall sport <%- fallSport %></label>
+      <labelfor="fallSport" id="fallSports" class="sports">Fall sport <%- fallSport %></label>
     </div>
 
     <div>
       <br>
-      <label for="springSport" id="springSports" style="display:none;" class="sports">Spring sport <%- springSport %></label>
+      <label for="springSport" id="springSports" class="sports">Spring sport <%- springSport %></label>
     </div>
     <br>
     
