--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -52,12 +52,14 @@
     
     <div>
       <br>
-      <labelfor="fallSport" id="fallSports" class="sports">Fall sport <%- fallSport %></label>
+      <labelfor="fallSport" id="fallSports" class="sports">Fall sport</label>
+      <%- fallSport %>
     </div>
 
     <div>
       <br>
-      <label for="springSport" id="springSports" class="sports">Spring sport <%- springSport %></label>
+      <label for="springSport" id="springSports" class="sports">Spring sport</label>
+      <%- springSport %>
     </div>
     <br>
     
