Change automatic title of the page

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -1,3 +1,5 @@
+<% var pageTitle = "Naylor Learning Center"; %>
+
 <form method="POST" action="<%= action %>">
     <div>
       <label for="firstName" value="First Name">First name</label>
