--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    Naylor Learning Center
+    <%=pageTitle%>
   </title>
 
   <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
