--- a/views/pages/check_in/editForm.html
+++ b/views/pages/check_in/editForm.html
@@ -12,7 +12,7 @@
     <a target="_blank" href="#" title="What do you hope to accomplish today?"> </a>
     <br>
     
-    <textarea name="purpose" autofocus rows="10" cols="30" maxlength="255" required></textarea>
+    <textarea name="purpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required></textarea>
     <br>
     <br>
     
