--- a/views/pages/check_in/editForm.html
+++ b/views/pages/check_in/editForm.html
@@ -2,7 +2,7 @@
 <% include ../logoutTimer.html %>
 -->
 
-<% var pageTitle = "Naylor Learning Center - Check In"; %>
+<% var pageTitle = "Check In - Naylor Learning Center"; %>
 
 <script src="/javascripts/formCheck.js"></script>
 
