--- a/views/pages/check_out/editForm.html
+++ b/views/pages/check_out/editForm.html
@@ -1,4 +1,4 @@
-<% var pageTitle = "Naylor Learning Center - Check Out"; %>
+<% var pageTitle = "Check Out - Naylor Learning Center"; %>
 
     <!-- If they didn't check in send them to the check in page -->
 
