Check in, Checkout

--- a/views/pages/check_in/editForm.html
+++ b/views/pages/check_in/editForm.html
@@ -4,6 +4,8 @@
 
 <% var pageTitle = "Check In - Naylor Learning Center"; %>
 
+<%- partial('./partials/logoutTimer.html') %>
+
 <script src="/javascripts/formCheck.js"></script>
 
 <form action="<% action %>" method="post">
