--- a/views/pages/check_out/editForm.html
+++ b/views/pages/check_out/editForm.html
@@ -1,12 +1,28 @@
 <% var pageTitle = "Check Out - Naylor Learning Center"; %>
 
+<%- partial('./partials/logoutTimer.html') %>
+
     <!-- If they didn't check in send them to the check in page -->
 
-    <!-- <p>You checed in <%= ######### %> -->
+    
 
 <form method="POST" action="<%= action %>">
-    <p>The purpose of your visit was: </p>
-    <textarea rows="4" cols="75" disabled><%= visit.visit_purpose %></textarea>
+    
+    <<p>You checed in <%= formData.checkInTime %> 
+    
+    <% if (estimateDuration != 0) { %>
+        <p>Please estimate the duration of your visit:&nbsp; 
+            <select name="estimatedDuration" required>
+                <% for (var i = 1; i <= 32; i++) { %>
+                    <option value="<%= i  %>"><%=i * 0.25%></option>
+                <% } %>
+            </select>&nbsp; hour(s).
+        </p>
+    <% } %>
+    
+    
+    <p>The purpose of your visit was: <%=formData.visitPurpose%></p>
+    <textarea rows="4" cols="75" disabled><%= visit.visitPurpose %></textarea>
     <br>
     <p>Did you accomplish yhe goal/purpose of your visit?</p>
 
