--- a/views/pages/check_out/editForm.html
+++ b/views/pages/check_out/editForm.html
@@ -22,7 +22,7 @@
     
     
     <p>The purpose of your visit was: <%=formData.visitPurpose%></p>
-    <textarea rows="4" cols="75" disabled><%= visit.visitPurpose %></textarea>
+    <textarea rows="4" cols="75" disabled><%= formData.visitPurpose %></textarea>
     <br>
     <p>Did you accomplish yhe goal/purpose of your visit?</p>
 
