--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -1,4 +1,4 @@
-<% var pageTitle = "Naylor Learning Center"; %>
+<!--<% var pageTitle = "Naylor Learning Center" %>-->
 
 <form method="POST" action="<%= action %>">
     <div>
@@ -47,8 +47,7 @@
     
     Are you an athlete?
     <br>
-    <input id="yesAthlete" type="radio" name="YNAthlete"/> Yes
-    <input id="noAthlete" type="radio" name="YNAthlete"/> No
+    
     <br>
     
     <div>
