change names of variables

--- a/views/pages/check_out/editForm.html
+++ b/views/pages/check_out/editForm.html
@@ -22,15 +22,15 @@
     <br>
     <p>Did you accomplish yhe goal/purpose of your visit?</p>
 
-    <input type="radio" name="purpose_achived" value="Yes" /> Yes
-    <input type="radio" name="purpose_achived" value="No" /> No
-    <input type="radio" name="purpose_achived" value="NotSure" /> Not Sure
+    <input type="radio" name="purposeAchived" value="Yes" /> Yes
+    <input type="radio" name="purposeAchived" value="No" /> No
+    <input type="radio" name="purposeAchived" value="NotSure" /> Not Sure
     <br>
 
     <br>
     <p>Did you use a tutor?</p>
-    <input type="radio" name="used_tutor" value="Yes" /> Yes
-    <input type="radio" name="used_tutor" value="No" /> No
+    <input type="radio" name="usedTutor" value="true" /> Yes
+    <input type="radio" name="usedTutor" value="false" /> No
     <br>
     <p>If yes, list the courses: </p>
     <input id="tutor" type="text" name="tutor" maxlength="255"/>
