--- a/views/pages/check_out/editForm.html
+++ b/views/pages/check_out/editForm.html
@@ -20,7 +20,7 @@
     <p>The purpose of your visit was: <%=formData.visitPurpose%></p>
     <textarea rows="4" cols="75" disabled><%= formData.visitPurpose %></textarea>
     <br>
-    <p>Did you accomplish yhe goal/purpose of your visit?</p>
+    <p>Did you accomplish the goal/purpose of your visit?</p>
 
     <input type="radio" name="purposeAchived" value="Yes" /> Yes
     <input type="radio" name="purposeAchived" value="No" /> No
