--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -10,7 +10,7 @@
     <a target="_blank" href="#" title="What do you hope to accomplish today?"> </a>
     <br>
     
-    <textarea name="purpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required></textarea>
+    <textarea name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required></textarea>
     <br>
     <br>
     
