--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -1,4 +1,4 @@
-<!--<% var pageTitle = "Naylor Learning Center" %>-->
+<!--<%= var pageTitle = "Naylor Learning Center" %>-->
 
 <form method="POST" action="<%= action %>">
     <div>
