--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -1,4 +1,4 @@
-<% var pageTitle = "Check Out - Naylor Learning Center"; %>
+<%= var pageTitle = "Check Out - Naylor Learning Center"; %>
 
 <%- partial('./partials/logoutTimer.html') %>
     
