--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,4 +1,4 @@
-<% var pageTitle = "Check In - Naylor Learning Center"; %>
+<%= var pageTitle = "Check In - Naylor Learning Center"; %>
 
 <%- partial('./partials/logoutTimer.html') %>
 
