Include instead of partials

--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,6 +1,6 @@
 <% var pageTitle = "Check In - Naylor Learning Center"; %>
 
-<%- partial('./partials/logoutTimer.html') %>
+<%- include('./include/logoutTimer.html') %>
 
 <script src="/javascripts/formCheck.js"></script>
 
