--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -1,6 +1,6 @@
 <% var pageTitle = "Check Out - Naylor Learning Center"; %>
 
-<%- partial('./partials/logoutTimer.html') %>
+<%- include('./include/logoutTimer.html') %>
     
 <form method="POST" action="<%= action %>">
     
