--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -6,10 +6,10 @@
 
 <form action="<% action %>" method="post">
     
-    <br> What is your goal/purpose for this visit?
-    <a target="_blank" href="#" title="What do you hope to accomplish today?"> </a>
-    <br>
+    <br> 
     
+    <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
+
     <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required></textarea>
     <br>
     <br>
