--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -4,7 +4,7 @@
     
 <form method="POST" action="<%= action %>">
     
-    <<p>You checed in <%= formData.checkInTime %> 
+    <p>You checed in <%= formData.checkInTime %> </p>
     
     <% if (estimateDuration != 0) { %>
         <p>Please estimate the duration of your visit:&nbsp; 
@@ -22,22 +22,22 @@
     <br>
     <p>Did you accomplish the goal/purpose of your visit?</p>
 
-    <input id="purposeAchived" type="radio" name="purposeAchived" value="Yes" /> Yes
-    <input id="purposeAchived" type="radio" name="purposeAchived" value="No" /> No
-    <input id="purposeAchived" type="radio" name="purposeAchived" value="NotSure" /> Not Sure
+    <input id="purposeAchivedY" type="radio" name="purposeAchived" value="Yes" /> Yes
+    <input id="purposeAchivedN" type="radio" name="purposeAchived" value="No" /> No
+    <input id="purposeAchivedNS" type="radio" name="purposeAchived" value="NotSure" /> Not Sure
     <br>
 
     <br>
     <p>Did you use a tutor?</p>
-    <input id="usedTutuor" type="radio" name="usedTutor" value="true" /> Yes
-    <input id="usedTutuor" type="radio" name="usedTutor" value="false" /> No
+    <input id="usedTutuorY" type="radio" name="usedTutor" value="true" /> Yes
+    <input id="usedTutuorN" type="radio" name="usedTutor" value="false" /> No
     <br>
     <p>If yes, list the Tutor: </p>
     <input id="tutor" type="text" name="tutor" maxlength="255"/>
     
     <br>
     <p>Comments:</p>
-    <textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"></textarea>
+    <!--<textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"></textarea>-->
     <br>
     
     <br>
