--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -1,9 +1,9 @@
-<!--
-<%- include('../include/logoutTimer.html') %>-->
+
+<%- include('../include/logoutTimer.html') %>
     
 <form method="POST" action="<%= action %>">
     
-    <p>You check in <%= formData.checkInTime %> </p>
+    <p>You check in </p> <%= formData.checkInTime %>
     
     <% if (isLengthEstimated) { %>
         <p>Please estimate the duration of your visit to the nearest quarter hour:&nbsp; 
@@ -15,10 +15,10 @@
         </p>
     <% } %>
 
-   <!-- 
-    <p>The purpose of your visit was: <%=formData.visitPurpose%></p>
+ 
+    <p>The purpose of your visit was: </p> <%=formData.visitPurpose%>
     <textarea rows="4" cols="75" disabled><%= formData.visitPurpose %></textarea>
-    <br>-->
+    <br>
  
 
     <div>
@@ -27,6 +27,7 @@
     </div>
     <br>
     
+
     <!--TODO radio butoon for a tutor used-->
     
     <div>
@@ -34,10 +35,10 @@
       <input id="tutor" name="tutor" type="text" autofocus maxlength="255" required value="<%= formData.tutor %>"> 
     </div>
     <br>
-   <!-- 
+   
     <p>Comments:</p>
     <textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"></textarea>
-    <br>-->
+    <br>
     
     <br>
     <button type="submit">Submit</button>
