--- a/views/pages/StaffRegisterBrowser.html
+++ b/views/pages/StaffRegisterBrowser.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Naylor Learning Center - Register Browser</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   <script type="text/javascript">
     function validateForm() {
       var d = new Date();
