--- a/views/pages/visit/view.html
+++ b/views/pages/visit/view.html
@@ -4,7 +4,7 @@ This "sort" method will also be the basis for the initial data load as well-->
     https://ejs.co/-->
 
 <body>
-    <form method="POST" action="TBD">
+    <form method="POST" action= "<%= action %>">
     <label for="query" value="Input">Input</label>
     <input id="query" type="text">
     </form>
@@ -12,10 +12,11 @@ This "sort" method will also be the basis for the initial data load as well-->
 </body>
 
 
-<!-- 
-    This will be moved to a controller to follow the RESTful API better.
+ 
+    <!--This will be moved to a controller to follow the RESTful API better.-->
     <script> 
-    var RETURN_SQL_TABLE =  `SELECT $1 FROM visit`
-    var tableRequested = await sails.sendNativeQuery(RETURN_SQL_TABLE, query)
+    var RETURN_SQL_TABLE =  `SELECT * FROM visit`;
+    var tableRequested = await sails.sendNativeQuery(RETURN_SQL_TABLE, query);
+    console.log(tableRequested);
      </script>
--->
+
