--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,4 +1,4 @@
-<form method="POST" action="#">
+<form method="POST" action="/login">
     <p>
          <label>Username
             <input name="username" autofocus type="text">
