--- a/views/pages/visit/view.html
+++ b/views/pages/visit/view.html
@@ -13,10 +13,11 @@ This "sort" method will also be the basis for the initial data load as well-->
 
 
  
-    <!--This will be moved to a controller to follow the RESTful API better.-->
+    <!--This will be moved to a controller to follow the mvc better.
     <script> 
     var RETURN_SQL_TABLE =  `SELECT * FROM visit`;
     var tableRequested = await sails.sendNativeQuery(RETURN_SQL_TABLE, query);
     console.log(tableRequested);
      </script>
+     -->
 
