--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -1,8 +1,8 @@
-
+<% try { %>
 <%- include('../include/logoutTimer.html') %>
-    
+
 <form method="POST" action="<%= action %>">
-    
+
     <p>You check in </p> <%= formData.checkInTime %>
     
     <% if (isLengthEstimated) { %>
@@ -16,7 +16,7 @@
     <% } %>
 
  
-    <p>The purpose of your visit was: </p> <%=formData.visitPurpose%>
+    <p>The purpose of your visit was: </p> <%= formData.visitPurpose%>
     <textarea rows="4" cols="75" disabled><%= formData.visitPurpose %></textarea>
     <br>
  
@@ -29,19 +29,20 @@
     
 
     <!--TODO radio butoon for a tutor used-->
-    
+
     <div>
-      <label for="tutor" value="tutor">If yes, list the Tutor:</label>
-      <input id="tutor" name="tutor" type="text" autofocus maxlength="255" required value="<%= formData.tutor %>"> 
+        <label for="tutorCourses" value="tutorCourses">If yes, list the Courses:</label>
+        <input id="tutorCourses" name="tutorCourses" type="text" autofocus maxlength="255" required value="<%= formData.tutorCourses %>">
     </div>
     <br>
-   
-    <p>Comments:</p>
-    <textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"></textarea>
+
+    <!--<p>Comments:</p>
+    <textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"> </textarea>
+    <br>-->
+
     <br>
-    
-    <br>
-    <button type="submit">Submit</button>
-    
+    <button id="submitButton" type="submit">Submit</button>
+
 
 </form>
+<% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
