--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -22,7 +22,7 @@
  
 
     <div>
-      <label for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
+      <label id="purposeAchieved" for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
       <%- formData.purposeAchieved %>
     </div>
     <br>
@@ -36,9 +36,9 @@
     </div>
     <br>
 
-    <!--<p>Comments:</p>
-    <textarea id="comment" name="comment"rows="4" cols="75" placeholder="Description"> </textarea>
-    <br>-->
+    <p>Comments:</p>
+    <textarea rows="4" cols="75" id="comment"></textarea>
+    <br>
 
     <br>
     <button id="submitButton" type="submit">Submit</button>
