--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,5 +1,5 @@
 <% try { %>
-<!--<%- include('./include/logoutTimer.html') %>-->
+
 
 <script src="/javascripts/formCheck.js"></script>
 
@@ -9,7 +9,7 @@
     
     <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
 
-    <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required></textarea>
+    <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
     <br>
     <br>
     
