--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,15 +1,16 @@
 <% try { %>
-
-
 <script src="/javascripts/formCheck.js"></script>
 
 <form action="<% action %>" method="post">
     
     <br> 
     
-    <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
+    
 
-    <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
+    <div>
+        <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
+        <textarea id="visitPurpose" name="visitPurpose"  rows="10" cols="40" autofocus maxlength="255" placeholder="Description" required value="<%= formData.visitPurpose %>"></textarea>
+    </div>
     <br>
     <br>
     
