Changed the layout.html to use Naylor Learning Center to fix launch issue. Added Semi-colon too Visit Views test file.

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    <%=pageTitle%>
+    Naylor Learning Center
   </title>
 
   <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
