Visit Dates issues

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -39,7 +39,8 @@
     
     Are you an athlete?
     <br>
-    
+    <input id="yesAthlete" type="radio" name="YNAthlete"/> Yes
+    <input id="noAthlete" type="radio" name="YNAthlete"/> No
     <br>
     
     <div>
