testing text area

--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -22,7 +22,7 @@
  
 
     <div>
-      <label for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
+      <label id="purposeAchieved" for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
       <%- formData.purposeAchieved %>
     </div>
     <br>
