--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,7 +1,7 @@
 <% try { %>
 <script src="/javascripts/formCheck.js"></script>
 
-<form action="<% action %>" method="post">
+<form action="<%= action %>" method="post">
     
     <div>
         <p id="visitPurposeQuestion">What is your goal/purpose for this visit?</p>
