testing select labels

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -45,8 +45,9 @@
     
     <div>
       <br>
-      <label for="fallSport" id="fallSports" class="sports">Fall sport</label>
-      <%- fallSport %>
+      <label for="fallSport" class="sports">Fall sport</label>
+      <select id="fallSport" name="fallSport" value="<%- fallSport %>">
+      
     </div>
 
     <div>
