--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -22,8 +22,8 @@
  
 
     <div>
-      <label id="purposeAchieved" for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
-      <%- formData.purposeAchieved %>
+      <label  for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
+      <select id="purposeAchieved" name="purposeAchieved" value="<%- formData.purposeAchieved %>">
     </div>
     <br>
     
