--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -24,6 +24,9 @@
     <div>
       <label  for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
       <select id="purposeAchieved" name="purposeAchieved" value="<%- formData.purposeAchieved %>">
+        <option value="1">Yes</option>
+        <option value="2">No</option>
+      </select>&nbsp;
     </div>
     <br>
     
