test passing, not the coverage

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -46,7 +46,7 @@
     <div>
       <br>
       <label for="fallSport" class="sports">Fall sport</label>
-      <select id="fallSport" name="fallSport" value="<%- fallSport %>">
+      <%- fallSport %>
       
     </div>
 
