--- a/views/pages/visit/editForm.html
+++ b/views/pages/visit/editForm.html
@@ -22,8 +22,8 @@
  
 
     <div>
-      <label  for="purposeAchieved">Did you accomplish the goal/purpose of your visit?</label>
-      <select id="purposeAchieved" name="purposeAchieved" value="<%- formData.purposeAchieved %>">
+      <label  for="purposeAchieved" id="purposeAchievedLavel">Did you accomplish the goal/purpose of your visit?</label>
+    <%- purposeAchieved %>
     </div>
     <br>
     
