Removed console log in model. fixed merge issue

--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -46,9 +46,9 @@
     <div>
       <br>
       <label for="fallSport" class="sports">Fall sport</label>
-      <select id="fallSport" name="fallSport" value="<%- fallSport %>">
-      
+      <%- fallSport %>">
     </div>
+    <br>
 
     <div>
       <br>
