--- a/views/pages/visit/appendView.html
+++ b/views/pages/visit/appendView.html
@@ -13,7 +13,7 @@
 <body>
     <label for="query" value="Input">Search for student</label>
     <input id="query" type="text">
-    <input Id="submit" type="submit" value="Submit">
+    <input id="submit" type="submit" value="Submit">
 </body>
 </form>
 
